--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,12 @@
 html {
-  background-color: rgb(45, 52, 59);
+  background-image: url("./images/audioHazeBackgroundblock.png");
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-color: black;
   font-family: 'Montserrat', sans-serif;
   padding: 100px 0 0;
+  overflow: hidden;
 
 }
 
