--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,16 +1,5 @@
-body,html {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-* {
-  box-sizing: border-box;
-}
-
-
 .formDiv {
+  /* position: relative; */
   margin-top: 20%;
   min-height: 400px;
   max-width: 500px;
