--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,16 @@
+body,html {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+* {
+  box-sizing: border-box;
+}
+
 html {
-  background-image: url("./images/audioHazeBackgroundblock.png");
+  background-image: url("./images/audioHazeBackground.png");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -7,7 +18,7 @@ html {
   font-family: 'Montserrat', sans-serif;
   padding: 100px 0 0;
   overflow: hidden;
-
+  width: 100vw;
 }
 
 .root {
