--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,10 +9,11 @@ body,html {
   box-sizing: border-box;
 }
 
+
 html {
-  background-image: url("./images/audioHazeBackground.png");
+  background-image: url("./images/audioHazeBackgroundblock.png");
   background-size: cover;
-  background-position: top;
+  background-position: center top;
   background-repeat: no-repeat;
   background-color: black;
   font-family: 'Montserrat', sans-serif;
