--- a/frontend/src/components/LazerGrid/LazerGrid.css
+++ b/frontend/src/components/LazerGrid/LazerGrid.css
@@ -1,11 +1,15 @@
 .lazerDiv {
+  position: absolute;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: center;
   pointer-events: none;
-  /* align-items: center; */
+  top: -40px;
+  left: 0px;
+  align-items: center;
+  z-index: -1;
 }
 
 .pyramidGlow {
