--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,43 @@
 body,html {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 * {
   box-sizing: border-box;
 }
 
+body {
+  background-image: url("./images/audioHazeBackgroundblock.png");
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: black;
+  font-family: 'Montserrat', sans-serif;
+  padding: 100px 0 0;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 html {
-  background-image: url("./images/audioHazeBackgroundblock.png");
-  background-size: cover;
-  background-position: center top;
+  /* background-image: url("./images/audioHazeBackgroundblock.png");
+  background-size: auto;
+  background-position: center;
   background-repeat: no-repeat;
   background-color: black;
   font-family: 'Montserrat', sans-serif;
   padding: 100px 0 0;
   overflow: hidden;
   width: 100vw;
+  height: 100vh; */
 }
 
 .root {
   margin: 0;
   padding: 100px 0 0;
+
 }
