--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,10 +11,11 @@ body {
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-color: black;
   font-family: 'Montserrat', sans-serif;
   padding: 100px 0 0;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
