added audio bar and player with playback functionality

--- a/frontend/src/components/SongDetail/SongDetail.css
+++ b/frontend/src/components/SongDetail/SongDetail.css
@@ -1,7 +1,11 @@
 #mainSongDetailContent {
+  overflow: auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 #songDetailBlade {
