--- a/frontend/src/components/FrontPage/FrontPage.css
+++ b/frontend/src/components/FrontPage/FrontPage.css
@@ -1,5 +1,10 @@
 .mainFrontPageContent {
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 #outerFrontPageContainer {
@@ -8,10 +13,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 100%;
   margin: 20px 0px;
   padding: 10px;
   border-radius: 10px;
+  flex-shrink: 1;
 }
 
 #innerFrontPageContainer {
