--- a/frontend/src/components/FrontPage/FrontPage.css
+++ b/frontend/src/components/FrontPage/FrontPage.css
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  padding: 80px 0px;
+
 }
 
 #outerFrontPageContainer {
@@ -57,4 +59,13 @@
   background: #5da3ff;
   border-radius: 20px;
   /* -webkit-box-shadow: inset 0 0 5px rgb(93, 166, 255); */
+}
+
+.mainPlayButtonDiv {
+  opacity: 0;
+  transition: .3s;
+}
+
+.mainPlayButtonDiv:hover {
+  opacity: 1;
 }
