--- a/frontend/src/components/SongDetail/SongDetail.css
+++ b/frontend/src/components/SongDetail/SongDetail.css
@@ -4,18 +4,44 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 100%;
+  margin-top: 80px;
 }
 
 #songDetailBlade {
-  background-color: rgb(155, 155, 155);
+  background-color: rgba(99, 0, 58, 0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 100%;
-  margin: 20px 0px;
-  padding: 10px;
+  width: 600px;
+  margin-bottom: 20px;
+  padding: 20px;
   border-radius: 10px;
+}
+
+#titleArtistPlay {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  width: fit-content;
+
+}
+
+#titleArtist {
+  width: 100%;
+}
+
+#songTitle {
+  color: white;
+  font-size: 2em;
+  width: fit-content;
+  width: 100%;
+}
+
+#songArtist {
+  color: white;
+  font-size: 1em;
+  width: 100%;
 }
