--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,13 +8,13 @@ body,html {
 
 body {
   background-image: url("./images/audioHazeBackgroundClean.png");
-  background-size: auto;
-  background-position: center;
+  background-size: cover;
+  background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: black;
   font-family: 'Montserrat', sans-serif;
-  padding: 100px 0 0;
+  /* padding: 100px 0 0; */
   overflow-x: hidden;
   position: relative;
   display: flex;
@@ -25,21 +25,21 @@ body {
 
 
 html {
-  /* background-image: url("./images/audioHazeBackgroundblock.png");
+  /* background-image: url("./images/audioHazeBackgroundblock.png"); */
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-color: black;
   font-family: 'Montserrat', sans-serif;
-  padding: 100px 0 0;
+  /* padding: 100px 0 0; */
   overflow: hidden;
   width: 100vw;
-  height: 100vh; */
+  height: 100vh;
 }
 
 .root {
   margin: 0;
-  padding: 100px 0 0;
+  padding: none;
 
 }
 
