--- a/frontend/src/components/LazerGrid/LazerGrid.css
+++ b/frontend/src/components/LazerGrid/LazerGrid.css
@@ -1,17 +1,16 @@
 .lazerDiv {
-  position: absolute;
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: center;
   pointer-events: none;
-  top: -40px;
-  left: 0px;
+  /* top: 70px; */
+  margin-left: 8px;
   align-items: center;
-  z-index: -1;
+  z-index: 1;
   height: 100%;
-  overflow: hidden;
+  margin-top: 0px;
+  /* overflow: hidden; */
 }
 
 .pyramidGlow {
@@ -29,6 +28,7 @@
   /* animation: strokeanim 2s ease-in-out forwards; */
   /* animation: bloodpump 6s ease-out forwards infinite */
   stroke-width: 0;
+  filter: drop-shadow(0px 0px 3px rgba(130, 218, 255, 1))
 
 }
 
