--- a/frontend/src/components/RadioPlayer/RadioPlayer.css
+++ b/frontend/src/components/RadioPlayer/RadioPlayer.css
@@ -18,12 +18,17 @@
    font-size: 1.5em;
    filter: drop-shadow(0px 0px 5px rgb(0, 221, 255));
    text-decoration: none;
+   text-align: center;
+   width: 90% !important;
+
 }
 
 .songArtist {
    color: rgb(255, 196, 0);
    font-size: 1.3em;
    filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
+   text-align: center;
+   width: fit-content !important;
 }
 
 .rhap_container {
