added styling to forms and container divs

--- a/frontend/src/components/SongBlade/SongBlade.css
+++ b/frontend/src/components/SongBlade/SongBlade.css
@@ -1,5 +1,5 @@
 .songBlade {
-  background-color: rgba(0, 0, 0, 0.187);
+  background-color: rgba(168, 0, 64, 0.1);
   /* margin: 10px; */
   padding: 20px;
   width: 250px;
@@ -7,7 +7,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
+
 
 .mainPlayButtonDiv {
   opacity: 0;
