--- a/frontend/src/components/SongDetail/SongDetail.css
+++ b/frontend/src/components/SongDetail/SongDetail.css
@@ -9,15 +9,18 @@
 }
 
 #songDetailBlade {
-  background-color: rgba(99, 0, 58, 0.5);
+  border: 1px solid rgba(255, 0, 98, 0.705);
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
   width: 600px;
   margin-bottom: 20px;
   padding: 20px;
-  border-radius: 10px;
+  height: max-content;
+  margin-bottom: 80px;
 }
 
 #titleArtistPlay {
@@ -25,12 +28,12 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: row;
-  width: fit-content;
+  width: 80%;
 
 }
 
 #titleArtist {
-  width: 100%;
+  width: fit-content;
 }
 
 #songTitle {
@@ -44,4 +47,8 @@
   color: white;
   font-size: 1em;
   width: 100%;
+}
+
+.imagePlay {
+  box-shadow: 0px 0px 10px rgb(255, 0, 98);
 }
