--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -20,13 +20,16 @@ body,html {
   margin-top: 20%;
   min-height: 100px;
   max-width: 500px;
-  background-color: rgb(112, 122, 139);
+  /* background-color: rgb(112, 122, 139); */
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid rgb(30, 32, 34);
+  /* border: 2px solid rgb(30, 32, 34); */
   border-radius: 20px;
-
+  border: 1px solid rgba(255, 0, 98, 0.705);
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 10px rgb(255, 0, 98);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 textarea:focus, input:focus{
