--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -13,12 +13,23 @@
 .formDiv {
   min-height: fit-content;
   max-width: 500px;
-  background-color: rgb(112, 122, 139);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  border: 2px solid rgb(30, 32, 34);
-  border-radius: 20px;
+  justify-content: flex-start;
+  border: 1px solid rgba(255, 0, 98, 0.705);
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 10px rgb(255, 0, 98);
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+}
+
+form > input {
+  background-color: rgb(30, 0, 27);
+  border: 2px solid rgb(255, 0, 98);
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 4px rgb(255, 0, 98);
+  color: white;
+  width: 80%;
 }
 
 textarea:focus, input:focus{
@@ -33,15 +44,14 @@ form {
   min-width: 300px;
   font-weight: bold;
   margin-bottom: 50px;
-
 }
 
 input {
-  border-radius: 5px;
+  /* border-radius: 5px;
   border: none;
   padding: 5px 10px;
   margin: 10px;
-  min-width: 50%;
+  min-width: 50%; */
 }
 
 ul {
@@ -64,7 +74,8 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: white;
+  color: white;
+  background-color: rgb(255, 0, 98);
   transition: .2s;
 }
 
