--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -20,10 +20,13 @@
 
 #modal-content {
   position: absolute;
-  background-color: rgb(112, 122, 139);
+  border: 1px solid rgba(255, 0, 98, 0.705);
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 10px rgb(255, 0, 98);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid rgb(30, 32, 34);
-  border-radius: 20px;
+  color: white;
+
 }
