--- a/frontend/src/components/FrontPage/FrontPage.css
+++ b/frontend/src/components/FrontPage/FrontPage.css
@@ -31,14 +31,15 @@
   overflow-y: hidden;
   overflow-x: auto;
   /* width: 600px; */
-  height: 315px;
+  height: fit-content;
   gap: 20px;
   width: 100%;
+  padding: 10px 10px 0px 10px;
 }
 
 .displayTitle {
   color: white;
-  padding: 10px 0px;
+  padding: 0px 0px 0px 10px;
   font-size: 2em;
 }
 
