--- a/frontend/src/components/FrontPage/FrontPage.css
+++ b/frontend/src/components/FrontPage/FrontPage.css
@@ -14,7 +14,7 @@
   border: 1px solid rgba(255, 0, 98, 0.705);
   border-radius: 3px;
   box-shadow: inset 0px 0px 10px rgb(255, 0, 98);
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.97);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,6 +22,7 @@
   margin: 20px 0px;
   padding: 10px;
   width: 80vw;
+  min-width: 490px;
   /* flex-shrink: 1; */
 }
 
