--- a/frontend/src/components/LazerGrid/LazerGrid.css
+++ b/frontend/src/components/LazerGrid/LazerGrid.css
@@ -5,18 +5,23 @@
   justify-content: center;
   pointer-events: none;
   /* top: 70px; */
-  margin-left: 8px;
   align-items: center;
   z-index: 1;
-  height: 100%;
-  margin-top: 0px;
-  /* overflow: hidden; */
+  overflow: hidden !important;
+  height: 100vh;
+  width: 100%;
+
 }
 
 .pyramidGlow {
-  /* position: absolute;
-  left: 2px;
-  top: 0px; */
+  /* position: fixed; */
+  /* left: 2px; */
+  /* top: 0px; */
+  overflow: hidden !important;
+  height: 100vh;
+  width: 1920px;
+  margin-top: 120px;
+  margin-left: 20px;
 }
 
 .glow {
@@ -28,7 +33,10 @@
   /* animation: strokeanim 2s ease-in-out forwards; */
   /* animation: bloodpump 6s ease-out forwards infinite */
   stroke-width: 0;
-  filter: drop-shadow(0px 0px 3px rgba(130, 218, 255, 1))
+  filter: drop-shadow(0px 0px 3px rgba(130, 218, 255, 1));
+  overflow: hidden !important;
+  height: 100vh;
+  width: 100%;
 
 }
 
