--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -19,17 +19,18 @@
   border: 1px solid rgba(255, 0, 98, 0.705);
   border-radius: 3px;
   box-shadow: inset 0px 0px 10px rgb(255, 0, 98);
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.97);
   color: white;
 }
 
 form > input {
-  background-color: rgb(30, 0, 27);
-  border: 2px solid rgb(255, 0, 98);
+  background-color: rgb(38, 102, 134);
+  border: 1px solid rgb(0, 255, 179);
   border-radius: 3px;
-  box-shadow: inset 0px 0px 4px rgb(255, 0, 98);
+  box-shadow: inset 0px 0px 4px rgb(0, 255, 179);
   color: white;
   width: 80%;
+  font-size: 1em;
 }
 
 textarea:focus, input:focus{
