--- a/frontend/src/components/CommentForm/CommentForm.css
+++ b/frontend/src/components/CommentForm/CommentForm.css
@@ -26,14 +26,17 @@
 #commentForm > textarea {
   margin-top: 10px;
   min-width: 300px;
+  min-height: 100px;
   background-color: rgb(38, 102, 134);
   border: 1px solid rgb(0, 255, 179);
   border-radius: 3px;
   box-shadow: inset 0px 0px 4px rgb(0, 255, 179);
   color: white;
-  width: 80%;
+  width: 100%;
   font-size: 1em;
   padding: 4px 6px;
+  resize: none;
+  overflow: auto;
 }
 
 #commentCancelSubmitDiv {
