--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,6 @@
 .navBar {
   width: 100%;
-  background-color: rgb(58, 79, 97);
+  background-color: rgb(0, 0, 0);
   position: fixed;
   left: 0;
   right: 0;
@@ -10,6 +10,9 @@
   align-items: center;
   justify-content: center;
   z-index: 100;
+  border-bottom: 1px solid rgba(255, 0, 98, 0.705);
+  box-shadow: inset 0px -4px 10px -4px rgb(255, 0, 98);
+
 }
 
 .navContent {
