--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -18,7 +18,7 @@
 .navContent {
   display: flex;
   max-width: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 0px 20px;
 }
 
@@ -31,14 +31,38 @@
 }
 
 
-.loginText, .homeText {
-margin: 0px 10px;
-background-color: rgb(0, 46, 75);
-padding: 10px 20px;
-border-radius: 10px;
-text-decoration: none;
-font-weight: bold;
-color: white;
+.loginText,
+.homeText,
+#profileButton  {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  border-radius: 0px 0px 3px 3px;
+  border-left: 1px solid rgba(255, 0, 98, 0.498);
+  border-right: 1px solid rgba(255, 0, 98, 0.498);
+  /* box-shadow: inset 0px -4px 10px -4px rgb(255, 0, 98); */
+  background-color: transparent;
+  margin: 0px 10px;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  transition: .2s;
+
+}
+
+.loginText:hover,
+.homeText:hover,
+#profileButton:hover {
+  box-shadow: inset 0px -4px 10px -1px rgb(255, 0, 98);
+
+}
+
+.homeText .active,
+.loginText .active,
+#profileButton .active
+ {
+  box-shadow: inset 0px -4px 10px -1px rgb(0, 255, 179);
 }
 
 .profile-dropdown {
@@ -76,4 +100,11 @@ color: white;
 #profileButton {
   padding: 0px 40px;
   margin: 0px 10px;
+}
+
+.homeText {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  border-radius: 0px 0px 3px 3px;
 }
