--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -24,6 +24,7 @@
 
 .navContainer {
   width: 100%;
+  max-width: 1500px;
 }
 
 .loginLinks {
@@ -46,29 +47,38 @@
   padding: 10px 20px;
   text-decoration: none;
   font-weight: bold;
-  color: white;
+  font-size: 1em;
   transition: .2s;
+  color: rgb(0, 255, 179);
+}
 
+.homeText > svg {
+  height: 25px;
+  fill: rgb(0, 255, 179);
 }
 
 .loginText:hover,
 .homeText:hover,
 #profileButton:hover {
-  box-shadow: inset 0px -4px 10px -1px rgb(255, 0, 98);
-
+  box-shadow: inset 0px -4px 10px -1px #ff0062;
+  background-color: transparent;
 }
 
-.homeText .active,
-.loginText .active,
-#profileButton .active
+.homeText.active,
+.loginText.active,
+#profileButton.active
  {
   box-shadow: inset 0px -4px 10px -1px rgb(0, 255, 179);
 }
 
 .profile-dropdown {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border-bottom: 1px solid rgba(255, 0, 98, 0.705);
+  box-shadow: inset 0px -4px 10px -4px rgb(255, 0, 98);
+  border-radius: 0px 0px 3px 3px;
   position: fixed;
-  right: 0px;
+  /* right: 10vw; */
   top: 60px;
   padding: 10px 20px;
 }
@@ -82,15 +92,15 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  background-color: #00ffb3;
+  color: rgb(0, 0, 0);
   transition: .2s;
 }
 
 
 
 #logoutButton:hover{
-  background-color: rgb(208, 208, 208)
+  background-color: rgba(0, 255, 179, 0.716);
 }
 
 #logoutButton:active{
@@ -98,8 +108,12 @@
 }
 
 #profileButton {
-  padding: 0px 40px;
+  padding: 0px 25px;
   margin: 0px 10px;
+}
+
+#profileButton > svg {
+  width: 28px;
 }
 
 .homeText {
