--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 #modal-background {
@@ -28,5 +29,4 @@
   flex-direction: column;
   align-items: center;
   color: white;
-
 }
