added demo user login functionality and buttons on login and signup page

--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -30,3 +30,9 @@
   align-items: center;
   color: white;
 }
+
+#loginButtonDiv {
+  min-width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
