--- a/frontend/src/components/LazerGrid/LazerGrid.css
+++ b/frontend/src/components/LazerGrid/LazerGrid.css
@@ -8,18 +8,18 @@
   align-items: center;
   z-index: 1;
   overflow: hidden !important;
-  height: 100vh;
-  width: 100%;
-
+  height: 100%;
+  width: fit-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .pyramidGlow {
-  /* position: fixed; */
-  /* left: 2px; */
-  /* top: 0px; */
   overflow: hidden !important;
-  height: 100vh;
-  width: 1920px;
+  height: 100%;
+  width: fit-content;
   margin-top: 120px;
   margin-left: 20px;
 }
