--- a/frontend/src/components/SongDetail/SongDetail.css
+++ b/frontend/src/components/SongDetail/SongDetail.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 100%;
   margin-top: 80px;
 }
 
@@ -17,8 +18,9 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 50vw;
-  min-width: 490px;
+  width: 100%;
+  max-width: 800px;
+  /* min-width: 490px; */
   margin-bottom: 20px;
   padding: 20px;
   height: max-content;
