--- a/frontend/src/components/SongBlade/SongBlade.css
+++ b/frontend/src/components/SongBlade/SongBlade.css
@@ -12,6 +12,7 @@
 
 .bladeContent {
   height: fit-content;
+
 }
 
 
@@ -41,7 +42,7 @@
 
 .imagePlay {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 250px;
@@ -70,4 +71,19 @@ a {
   font-weight: 100;
   padding: 2px 4px;
   font-size: .9em;
+}
+
+.heartContainerFront {
+
+  margin-top: 16px;
+  padding: 0px 0px 0px 10px;
+  /* border: 1px solid rgb(0, 255, 179); */
+  border-radius: 3px;
+  /* box-shadow: inset 0px 0px 10px rgb(0, 255, 179); */
+  background-color: rgba(0, 0, 0, 0.499);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1.5em;
 }
