--- a/frontend/src/components/SongDetail/SongDetail.css
+++ b/frontend/src/components/SongDetail/SongDetail.css
@@ -72,3 +72,16 @@
   font-weight: normal;
   height: fit-content;
 }
+
+#heartedContainer {
+  margin-top: 16px;
+  padding: 0px 0px 0px 10px;
+  border: 1px solid rgb(0, 255, 179);
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 10px rgb(0, 255, 179);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1.5em;
+}
