--- a/frontend/src/components/SongBlade/SongBlade.css
+++ b/frontend/src/components/SongBlade/SongBlade.css
@@ -43,12 +43,18 @@
 .imagePlay {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 250px;
   height: 250px;
   border-radius: 4px;
 
+}
+
+.spacerDiv {
+  height: 34px;
+  pointer-events: none;
+  margin-top: 10px;
 }
 
 .songArt {
@@ -74,16 +80,21 @@ a {
 }
 
 .heartContainerFront {
-
-  margin-top: 16px;
   padding: 0px 0px 0px 10px;
-  /* border: 1px solid rgb(0, 255, 179); */
   border-radius: 3px;
-  /* box-shadow: inset 0px 0px 10px rgb(0, 255, 179); */
   background-color: rgba(0, 0, 0, 0.499);
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   font-size: 1.5em;
+}
+
+.heartContainerPush {
+  margin-bottom: 10px;
+  padding: 0px 10px 0px 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
 }
