--- a/frontend/src/components/SongBlade/SongBlade.css
+++ b/frontend/src/components/SongBlade/SongBlade.css
@@ -43,7 +43,7 @@
 .imagePlay {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 250px;
   height: 250px;
