--- a/frontend/src/components/TestLogo/TestLogo.css
+++ b/frontend/src/components/TestLogo/TestLogo.css
@@ -4,23 +4,20 @@
 
 #middle_line {
   /* transition: .5s; */
-  animation: wiggle_line 1s ease-in-out alternate 6;
+  animation: wiggle_line 1s ease-in-out alternate 4;
 }
 
 #upper_circle {
-  animation: wiggle_upper 1s ease-in-out alternate 6;
+  animation: wiggle_upper 1s ease-in-out alternate 4;
 }
 
 #lower_circle {
-  animation: wiggle_lower 1s ease-in-out alternate 6;
+  animation: wiggle_lower 1s ease-in-out alternate 4;
 }
 
 
 @keyframes wiggle_line {
   0% {
-    d: path(
-      "M172.198,84.758,c-1.052-0.284-2.151-0.448-3.293-0.448c-7.01,0-12.692,5.682-12.692,12.69c0,7.008-5.682,12.692-12.689,12.692,S130.832,104.008,130.832,97V58.928c0-7.009-5.682-12.691-12.689-12.691c-7.01,0-12.692,5.682-12.692,12.691v76.142,c0,7.011-5.682,12.692-12.689,12.692c-7.01,0-12.692-5.682-12.692-12.692V97c0-7.009-5.681-12.69-12.689-12.69,c-7.011,0-12.692,5.682-12.692,12.69c0,7.008-5.681,12.692-12.689,12.692c-1.142,0-2.241-0.167-3.296-0.448"
-    );
   }
   100% {
     d: path(
@@ -31,9 +28,6 @@
 
 @keyframes wiggle_upper {
   0% {
-    d: path(
-      "M105.45,29.129C67.965,29.129,37.58,59.516,37.58,97c0,4.183,0.396,8.268,1.123,12.244,c1.055,0.281,2.154,0.448,3.296,0.448c7.008,0,12.689-5.685,12.689-12.692c0-7.009,5.682-12.69,12.692-12.69,c7.008,0,12.689,5.682,12.689,12.69v38.07c0,7.011,5.682,12.692,12.692,12.692c7.008,0,12.689-5.682,12.689-12.692V58.928,c0-7.009,5.682-12.691,12.692-12.691c7.008,0,12.689,5.682,12.689,12.691V97c0,7.008,5.684,12.692,12.692,12.692,s12.689-5.685,12.689-12.692c0-7.009,5.682-12.69,12.692-12.69c1.142,0,2.241,0.165,3.293,0.448,C166.432,53.119,138.751,29.129,105.45,29.129z"
-    );
     fill: #B76B91;
   }
   49% {
@@ -52,9 +46,7 @@
 
 @keyframes wiggle_lower {
   0% {
-    /* d: path(
-      "M105.45,29.129C67.965,29.129,37.58,59.516,37.58,97c0,4.183,0.396,8.268,1.123,12.244,c1.055,0.281,2.154,0.448,3.296,0.448c7.008,0,12.689-5.685,12.689-12.692c0-7.009,5.682-12.69,12.692-12.69,c7.008,0,12.689,5.682,12.689,12.69v38.07c0,7.011,5.682,12.692,12.692,12.692c7.008,0,12.689-5.682,12.689-12.692V58.928,c0-7.009,5.682-12.691,12.692-12.691c7.008,0,12.689,5.682,12.689,12.691V97c0,7.008,5.684,12.692,12.692,12.692,s12.689-5.685,12.689-12.692c0-7.009,5.682-12.69,12.692-12.69c1.142,0,2.241,0.165,3.293,0.448,C166.432,53.119,138.751,29.129,105.45,29.129z"
-    ) */
+
     fill: #549A94
   }
   49% {
@@ -68,5 +60,41 @@
     d: path(
       "M156.213,97c0-7.008-5.682-12.692-12.689-12.692S130.832,89.992,130.832,97v38.072,c0,7.009-5.682,12.69-12.689,12.69c-7.01,0-12.692-5.682-12.692-12.69V58.93c0-7.011-5.682-12.692-12.689-12.692,c-7.01,0-12.692,5.682-12.692,12.692V97c0,7.009-5.681,12.69-12.689,12.69c-7.011,0-12.692-5.682-12.692-12.69,c0-7.008-5.681-12.692-12.689-12.692c-1.142,0-2.241,0.167-3.296,0.448c5.766-31.638,33.446-55.627,66.748-55.627,c37.483,0,67.871,30.386,67.871,67.871c0,4.183-0.398,8.27-1.123,12.242c-1.052,0.283-2.151,0.448-3.293,0.448,C161.895,109.69,156.213,104.009,156.213,97z"
     );
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+#p_line,
+#u_line,
+#l_line,
+#s_line,
+#e_line,
+#e_nub_line {
+  stroke-dashoffset: 0;
+  stroke-dasharray: 200 300;
+  transition: .5s ease-in-out;
+  stroke: white;
+  pointer-events: none;
+  animation: letter_pulse 4.5s linear;
+}
+
+@keyframes letter_pulse {
+  0% {
+    stroke-dashoffset: 200;
+    stroke-dasharray: 200 300;
+    stroke-width: 0px;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    stroke-dasharray: 200 300;
+    stroke-width: 15px;
   }
 }
