--- a/frontend/src/components/SongBlade/SongBlade.css
+++ b/frontend/src/components/SongBlade/SongBlade.css
@@ -48,7 +48,7 @@
   width: 250px;
   height: 250px;
   border-radius: 4px;
-
+  padding-top: 40px;
 }
 
 .spacerDiv {
@@ -91,8 +91,8 @@ a {
 }
 
 .heartContainerPush {
-  margin-bottom: 10px;
-  padding: 0px 10px 0px 10px;
+  margin-bottom: 4px;
+  padding: 0px 10px 0px 0px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
