--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  border: 1px solid rgba(255, 0, 98, 0.705);
+  border: 1px solid #ff0062b4;
   border-radius: 3px;
   box-shadow: inset 0px 0px 10px rgb(255, 0, 98);
   background-color: rgba(0, 0, 0, 0.97);
@@ -27,7 +27,7 @@ form > input {
   background-color: rgb(38, 102, 134);
   border: 1px solid rgb(0, 255, 179);
   border-radius: 3px;
-  box-shadow: inset 0px 0px 4px rgb(0, 255, 179);
+  box-shadow: inset 0px 0px 4px #00ffb3;
   color: white;
   width: 80%;
   font-size: 1em;
