--- a/frontend/src/components/UploadNewSongFormPage/NewSongForm.css
+++ b/frontend/src/components/UploadNewSongFormPage/NewSongForm.css
@@ -11,13 +11,33 @@
 }
 
 #uploading {
-  position: absolute;
-  left: 50%;
-  right: 50%;
+  position: fixed;
+  width: 100%;
+  /* left: 50vw; */
+  /* right: 50vw; */
   top: 60px;
   /* margin-top: 10px; */
   margin-bottom: -5px;
   user-select: none;
+}
+
+#doneUploading {
+  position: fixed;
+  width: 100%;
+  top: 60px;
+  margin-top: 5px;
+  color: #ff0062;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+#doneUploading:hover {
+  filter:drop-shadow(0px 0px 4px #ff0062)
+}
+
+#removeMessage {
+  display: none;
 }
 
 #uText {
