--- a/frontend/src/components/UploadNewSongFormPage/NewSongForm.css
+++ b/frontend/src/components/UploadNewSongFormPage/NewSongForm.css
@@ -21,10 +21,25 @@
   user-select: none;
 }
 
-#doneUploading {
+#uploadingMessage {
   position: fixed;
   width: 100%;
   top: 60px;
+  margin-top: 5px;
+  color: #ff0062;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+#doneUploading {
+  /* position: fixed; */
+  /* width: 100%; */
+  /* top: 60px; */
   margin-top: 5px;
   color: #ff0062;
   text-align: center;
@@ -34,6 +49,24 @@
 
 #doneUploading:hover {
   filter:drop-shadow(0px 0px 4px #ff0062)
+}
+
+#messageExit {
+  font-size: .6em;
+  cursor: pointer;
+  transition: .2s;
+  /* border: 1px solid #ff0062; */
+  border-radius: 50%;
+  padding: 0px 4px 1px 4px;
+  bottom: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 16px;
+}
+
+#messageExit:hover {
+  transform: scale(1.2);
 }
 
 #removeMessage {
