--- a/frontend/src/components/AudioBar/AudioBar.css
+++ b/frontend/src/components/AudioBar/AudioBar.css
@@ -27,4 +27,10 @@
   /* justify-content: center; */
   z-index: 100;
   /* height: fit-content; */
+  /* pointer-events: none; */
+}
+
+#audioBar {
+  /* pointer-events: none; */
+
 }
