--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -3,39 +3,86 @@
   right: 10px;
   top: 0px;
   color: #ffc400;
-  filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
+  /* filter: drop-shadow(0px 0px 5px rgb(255, 0, 0)); */
   font-size: 1.2em;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   z-index: 1;
-
+  user-select: none;
 }
 
 .playlistDisplayText {
+  display: flex;
+  justify-content: flex-start;
   /* cursor: pointer; */
+  filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
+  width: fit-content;
+  max-width: 160px;
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
 }
 
 .playlistPlayIcon {
   margin-left: 4px;
-  /* filter: drop-shadow(0px 0px 5px rgb(255, 0, 0)); */
+  filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
   /* fill: #00ff77; */
 }
 
 .playlistDisplayText:hover {
-  /* color: #d9a700; */
-  filter: drop-shadow(0px 0px 3px rgb(255, 0, 0));
+  color: #d9a700;
+  filter: drop-shadow(0px 0px 10px rgb(255, 0, 0));
 }
 
 .playlistMenu {
-
+  position: absolute;
+  right: 0px;
+  bottom: 20px;
+  display: none;
+  flex-direction: column;
+  background-color: rgb(0, 0, 0);
+  width: 250px;
+  /* max-height: 0; */
+  height: fit-content;
+  /* transition: max-height 0.2s ease-out; */
+  padding: 10px 10px;
+  /* overflow: hidden; */
+  /* overflow: hidden; */
+  overflow-y: scroll;
+  overflow-x: hidden;
+  transition: height 0.2s ease-out;
 }
 
 .playlistMenuItem {
-
+  /* overflow: hidden; */
+  /* transition: height 0.2s ease-out; */
+  /* display: none; */
+  /* width: 200px; */
+  /* height: 0px; */
+  /* overflow: hidden; */
+  /* transition-property: height; */
+  /* transition-duration: .2s; */
+  /* transition: max-height 0.2s ease-out; */
 }
 
 #showPlaylist {
-  
+  width: 250px;
+  height: fit-content;
+  max-height: 300px;
+  display: flex;
+  /* overflow-y: scroll; */
+  transition: height 0.2s ease-out;
+}
+
+.playlistMenuText {
+  color: #d9a700;
+  /* filter: drop-shadow(0px 0px 5px rgb(255, 0, 0)); */
+  cursor: pointer;
+  font-size: 1.1em;
+}
+
+.playlistMenuText:hover {
+  filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
 }
