--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -43,6 +43,9 @@
   display: none;
   flex-direction: column;
   background-color: rgb(0, 0, 0);
+  border-radius: 3px;
+  border: 1px solid rgba(255, 0, 98, 0.705);
+  box-shadow: inset 0px 0px 10px rgb(255, 0, 98);
   width: 250px;
   /* max-height: 0; */
   height: fit-content;
@@ -65,6 +68,16 @@
   /* transition-property: height; */
   /* transition-duration: .2s; */
   /* transition: max-height 0.2s ease-out; */
+}
+
+.playlistMenuItemBlue {
+  color: rgb(81, 223, 255);
+  /* font-size: 1.5em; */
+}
+
+.playlistMenuItemBlue:hover {
+  /* font-size: 1.5em; */
+  filter: drop-shadow(0px 0px 5px rgb(0, 221, 255));
 }
 
 #showPlaylist {
