--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -99,3 +99,125 @@
 .playlistMenuText:hover {
   filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
 }
+
+.playlistPlusContainer {
+  position: relative;
+  /* color: white; */
+  /* font-size: 2em; */
+  /* background-color: rgba(0, 0, 0, 0.499); */
+  border-radius: 50%;
+  width: 40px;
+  /* text-align: center; */
+  user-select: none;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.playlistPlus {
+  position: relative;
+  color: white;
+  font-size: 2em;
+  background-color: rgba(0, 0, 0, 0.499);
+  border-radius: 50%;
+  width: 40px;
+  text-align: center;
+  user-select: none;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.playlistPlus:hover {
+  background-color: rgba(29, 29, 29, 0.499);
+}
+
+
+.playlistPlus:active {
+  transform: scale(.95);
+  /* transform: scale(.95) rotate(180deg); */
+}
+
+.toolTipText {
+  visibility: hidden;
+  width: 124px;
+  font-size: 1em;
+  color: white;
+  background-color: rgba(29, 29, 29, 0.499);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  /* Position the tooltip */
+  position: absolute;
+  top: -36px;
+  left: 0px;
+  z-index: 1;
+  cursor: default;
+  user-select: none;
+}
+
+.playlistPlusContainer:hover .toolTipText {
+  visibility: visible;
+}
+
+.toolTipText::after {
+  content: " ";
+  position: absolute;
+  top: 100%; /* At the bottom of the tooltip */
+  left: 16%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: rgba(29, 29, 29, 0.499) transparent transparent transparent;
+}
+
+.playlistFormContainer {
+  width: 230px;
+  height: 80px;
+  font-size: .5em;
+  background-color: rgba(29, 29, 29, 0.499);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  bottom: 46px;
+  left: 0px;
+  z-index: 10;
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.toolTipText::after {
+  content: " ";
+  position: absolute;
+  top: 100%; /* At the bottom of the tooltip */
+  left: 16%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: rgba(29, 29, 29, 0.499) transparent transparent transparent;
+}
+
+.playlistFormContainer::after {
+  content: " ";
+  position: absolute;
+  top: 100%; /* At the bottom of the tooltip */
+  left: 9%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: rgba(29, 29, 29, 0.499) transparent transparent transparent;
+}
+
+.playlistAddToForm {
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  width: 100%;
+  height: 100%;
+  min-width: 100px;
+  margin-bottom: 0px;
+}
+
