--- a/frontend/src/components/SongBlade/SongBlade.css
+++ b/frontend/src/components/SongBlade/SongBlade.css
@@ -98,9 +98,9 @@ a {
 
 .heartContainerPush {
   margin-bottom: 8px;
-  padding: 0px 10px 0px 0px;
+  padding: 0px 10px 0px 10px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
 }
