--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -171,19 +171,19 @@
 
 .playlistFormContainer {
   width: 230px;
-  height: 80px;
+  height: fit-content;
   font-size: .5em;
   background-color: rgba(29, 29, 29, 0.499);
   text-align: center;
   border-radius: 6px;
-  padding: 5px 0;
+  padding: 15px 0px;
   position: absolute;
   bottom: 46px;
   left: 0px;
   z-index: 10;
   cursor: default;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
 }
@@ -218,6 +218,41 @@
   width: 100%;
   height: 100%;
   min-width: 100px;
-  margin-bottom: 0px;
+  margin: 0px;
 }
 
+.successMessage {
+  width: 230px;
+  height: fit-content;
+  font-size: 1em;
+  color: white;
+  background-color: rgba(29, 29, 29, 0.499);
+  text-align: center;
+  border-radius: 6px;
+  padding: 15px 0px;
+  position: absolute;
+  bottom: 46px;
+  left: 0px;
+  z-index: 10;
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: clip;
+  /* white-space: nowrap; */
+  text-overflow: ellipsis;
+}
+
+.playlistSelect {
+  /* -webkit-appearance: none; */
+  background-color: rgb(38, 102, 134);
+  border: 1px solid rgb(0, 255, 179);
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 4px rgb(0, 255, 179);
+  color: white;
+  width: 200px;
+  font-size: 2em;
+  padding: 2px 10px;
+  outline: none;
+}
