--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -123,7 +123,7 @@
   text-align: center;
   user-select: none;
   cursor: pointer;
-  transition: .2s;
+  transition: .1s;
 }
 
 .playlistPlus:hover {
@@ -132,7 +132,7 @@
 
 
 .playlistPlus:active {
-  transform: scale(.95);
+  transform: scale(.97);
   /* transform: scale(.95) rotate(180deg); */
 }
 
@@ -186,6 +186,35 @@
   /* flex-direction: column; */
   align-items: center;
   justify-content: center;
+}
+
+.playlistFormContainer2 {
+  /* width: 230px; */
+  /* height: fit-content; */
+  /* font-size: .5em; */
+  /* background-color: rgba(29, 29, 29, 0.499); */
+  /* text-align: center; */
+  /* border-radius: 6px; */
+  /* padding: 15px 0px; */
+  /* position: absolute; */
+  /* bottom: 46px; */
+  /* left: 0px; */
+  /* z-index: 10; */
+  /* cursor: default; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+
+.playlistCreateForm {
+  min-width: 0px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
 }
 
 .toolTipText::after {
