--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -72,7 +72,7 @@
 
 .playlistMenuItemBlue {
   color: rgb(81, 223, 255);
-  /* font-size: 1.5em; */
+  font-size: 1.1em;
 }
 
 .playlistMenuItemBlue:hover {
