--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -152,9 +152,12 @@
 
 .playlistMenuItemBlue {
   /* color: rgb(81, 223, 255); */
-  color: rgb(255, 255, 255);
-  filter: drop-shadow(0px 0px 3px rgb(255, 0, 234));
+  /* color: rgb(255, 255, 255); */
+  color: #ffc400;
+  /* filter: drop-shadow(0px 0px 3px rgb(255, 0, 234)); */
   font-size: 1.1em;
+  padding: 0px 0px 4px 0px;
+  border-bottom: 1px solid rgba(81, 223, 255, 0.729);
 }
 
 .playlistMenuItemBlue:hover {
@@ -378,4 +381,25 @@
   font-size: 2em;
   color: white;
   margin: 0px;
+}
+
+.backButton {
+  text-align: right;
+  color: #ffc400;
+  font-size: 1.1em;
+  padding: 0px 0px 4px 0px;
+  /* border-bottom: 1px solid rgba(81, 223, 255, 0.729); */
+}
+
+.backButton:hover {
+  filter: drop-shadow(0px 0px 5px rgb(0, 221, 255));
+}
+
+.editPlaylistTitle {
+  color: rgb(134, 239, 255);
+  user-select: none;
+  cursor: default;
+  font-size: 1.1em;
+  border-bottom: 1px solid rgba(81, 223, 255, 0.729);
+  padding: 0px 0px 4px 0px;
 }
