--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -85,7 +85,8 @@
   display: none;
   flex-direction: column;
   background-color: rgba(60, 151, 203, 0.5);
-  border-radius: 3px;
+  /* border-radius: 3px; */
+  border-radius: 3px 30px 3px 3px;
   border: 3px solid rgb(81, 223, 255);
   box-shadow: inset 0px 0px 20px rgb(81, 223, 255);
   width: 250px;
@@ -95,7 +96,7 @@
   padding: 10px 10px;
   /* overflow: hidden; */
   /* overflow: hidden; */
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   transition: height 0.2s ease-out;
   filter: drop-shadow(0px 0px 6px rgb(81, 223, 255));
@@ -383,11 +384,19 @@
   margin: 0px;
 }
 
+.topBarEdit {
+  /* padding: 0px 0px 4px 0px; */
+  display: flex;
+  justify-content: flex-end;
+  cursor: auto;
+}
+
 .backButton {
-  text-align: right;
+  /* text-align: right; */
   color: #ffc400;
   font-size: 1.1em;
   padding: 0px 0px 4px 0px;
+  cursor: pointer;
   /* border-bottom: 1px solid rgba(81, 223, 255, 0.729); */
 }
 
@@ -402,4 +411,13 @@
   font-size: 1.1em;
   border-bottom: 1px solid rgba(81, 223, 255, 0.729);
   padding: 0px 0px 4px 0px;
+}
+
+.xRemove {
+  color: #ffc400;
+}
+
+.xRemove:hover {
+  color: #ff8800;
+  filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
 }
